[package]
name = "encuum"
version = "0.1.0"
edition = "2021"

[dependencies]
headless_chrome = {git = "https://github.com/allquixotic/rust-headless-chrome", branch = "ftbts-allquixotic", features = ["fetch"]}
#headless_chrome = {git = "https://github.com/allquixotic/rust-headless-chrome", branch = "master", features = ["fetch"]}
failure = "0"
serde_json = "1"
serde = { version = "1", features = [ "derive"]}
dotenv = "0"
regex = "1"